Initial Nav Update

--- a/index.html
+++ b/index.html
@@ -26,46 +26,51 @@
      crossorigin="anonymous"></script>
 
 </head>
+
+
+
+
+
 <body>
    
 <!-- header section starts  -->
 
-<header class="header">
 
-<div class="LogoCC"><h1 class="job">Campus Crafter</h1></div>
+
+<!-- <div class="LogoCC"><h1 class="job">Campus Crafter</h1></div>
 
 <input type="checkbox" id="active">
-<label for="active" class="menu-btn"><i class="fas fa-bars"></i></label>
-<div class="wrapper">
+<label for="active" class="menu-btn"><i class="fas fa-bars"></i></label> -->
 
 
-    <div class="container">
-        <nav>
-            <ul>
+
+
+
+
+    <nav class="navbar">
+        <div class="navbar-container container">
+            <input type="checkbox" name="" id="">
+            <div class="hamburger-lines">
+                <span class="line line1"></span>
+                <span class="line line2"></span>
+                <span class="line line3"></span>
+            </div>
+            <ul class="menu-items">
+                <li> <a href="#home" class="active">Home</a></li>
                 <li><a href="#">Alumni Network</a></li>
                 <li><a href="#">Syllabus</a></li>
-                <li><a href="#">Clubs</a></li>  
-                <li><a href="#">About Us</a></li>  
-                <li><a href="#">Review</a></li>
-                <li><a href="#">FAQ'S</a></li>
+                <li><a href="#">Clubs</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Reviews</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
-        </nav>
-    </div>
+            <h1 class="logo">CampusCrafter</h1>
+        </div>
+    </nav>
 
 
-<div class="example">
-    <a href="#home" class="active">Home</a>
-    <a href="#">Alumni Network</a>
-    <a href="#">Syllabus</a>
-    <a href="#">Clubs</a>
-    <a href="#">About Us</a>
-    <a href="#">Reviews</a>
-    <a href="#">FAQ'S</a>
-    <a href="#">Contact Us</a>
-  </div> -->
 
-</header>
+
 
 <!-- header section ends -->
 
