--- a/index.html
+++ b/index.html
@@ -29,6 +29,36 @@
 <body>
 
 
+    <nav class="nav">
+        <div class="container">
+            <div class="logo">
+                <a href="#">Your Logo</a>
+            </div>
+            <div id="mainListDiv" class="main_list">
+                <ul class="navlinks">
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Alumni Network</a></li>
+                    <li><a href="#">Syllabus</a></li>
+                    
+                    <li><a href="#">Resources</a></li>
+                   
+                </ul>
+            </div>
+            <span class="navTrigger">
+                <i></i>
+                <i></i>
+                <i></i>
+            </span>
+        </div>
+    </nav>
+
+
+
+
+
+
+
+<!-- 
     <nav class="navbar">
         <div class="navbar-container container">
             <input type="checkbox" name="" id="">
@@ -51,6 +81,7 @@
 
 
 
+ -->
 
 
 
@@ -71,6 +102,18 @@
 
 
 
+
+
+    <script>
+        $(window).scroll(function() {
+            if ($(document).scrollTop() > 50) {
+                $('.nav').addClass('affix');
+                console.log("OK");
+            } else {
+                $('.nav').removeClass('affix');
+            }
+        });
+    </script>
 
 
 
